Bug 138938 - No tooltips for Sidebar tab bar buttons (Windows, kf5, gen)
Summary: No tooltips for Sidebar tab bar buttons (Windows, kf5, gen)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Tab-Bar
  Show dependency treegraph
 
Reported: 2020-12-15 12:12 UTC by Buovjaga
Modified: 2020-12-16 08:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-12-15 12:12:17 UTC
Hovering over Sidebar deck buttons, the tooltips can only be seen with GTK3

Bibisected with linux-64-7.1 to https://git.libreoffice.org/core/commit/75b9109a2da35cf0f0914504145d84cf918c6af2
weld TabBar

Adding Cc: to Caolán McNamara
Comment 1 Caolán McNamara 2020-12-15 14:32:08 UTC
it must be because the tooltip was put on the toolbar and not on the contained toolbar item
Comment 2 Commit Notification 2020-12-15 19:39:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9fdc7384eff0e9627de2d9c2b59a7716f9e8af25

tdf#138938 put the tooltip on the toolbar item instead of the toolbar

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2020-12-16 05:56:27 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+
Build ID: bfcd952dc7820c4cf8761c4222d29ede039391dc
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 16 December 2020
Comment 4 Commit Notification 2020-12-16 08:47:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/53d40fb451e0cb477cdb80091a19e61220814a1d

tdf#138938 put the tooltip on the toolbar item instead of the toolbar

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.