tdf#138938 put the tooltip on the toolbar item instead of the toolbar

Change-Id: I69ff3813a726f26daa20a00ce3a0bb311a162c39
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107770
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>